{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 383,
  "lineage": "d4a07b1c-0b1c-df93-e3db-9fbc55e950c9",
  "resources": [
    {
      "module": "module.app-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:343246757285:instance/i-04063d3d1b56c7ba7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04063d3d1b56c7ba7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-vm-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ec3a31d7fc6a2ac",
            "private_dns": "ip-10-0-1-111.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-3-10-213-12.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.213.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059855b25ec6c816b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0316a1a35ffb8500d",
            "tags": {
              "Name": "Heating app"
            },
            "tags_all": {
              "Name": "Heating app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e9b7652ea1a883a",
              "sg-0898aaa8609b6f29f",
              "sg-0cb1fa49524578b19",
              "sg-0eaf89ba6b17d4ccd"
            ]
          },
          "dependencies": [
            "module.app-server.data.aws_ami.ubuntu",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.app-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:343246757285:instance/i-0e1c3c0dfb09c6297",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1c3c0dfb09c6297",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-vm-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dfe405b74218517",
            "private_dns": "ip-10-0-0-218.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.218",
            "public_dns": "ec2-3-8-176-161.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.176.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a573a6a1c00bf4df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d9fb165087429a2",
            "tags": {
              "Name": "Lighting app"
            },
            "tags_all": {
              "Name": "Lighting app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e9b7652ea1a883a",
              "sg-0898aaa8609b6f29f",
              "sg-0cb1fa49524578b19",
              "sg-0eaf89ba6b17d4ccd"
            ]
          },
          "dependencies": [
            "module.app-server.data.aws_ami.ubuntu",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.app-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:343246757285:instance/i-07dbb78557ee85529",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07dbb78557ee85529",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-vm-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00287c51682e432be",
            "private_dns": "ip-10-0-2-172.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.172",
            "public_dns": "ec2-3-8-234-253.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.234.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de54b0467922eb6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b4c9bcfd1aca7c6",
            "tags": {
              "Name": "Status app"
            },
            "tags_all": {
              "Name": "Status app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e9b7652ea1a883a",
              "sg-0898aaa8609b6f29f",
              "sg-0cb1fa49524578b19",
              "sg-0eaf89ba6b17d4ccd"
            ]
          },
          "dependencies": [
            "module.app-server.data.aws_ami.ubuntu",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:loadbalancer/app/apps-load-balancer/a1a6a98f2298dce5",
            "arn_suffix": "app/apps-load-balancer/a1a6a98f2298dce5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "apps-load-balancer-178060818.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:loadbalancer/app/apps-load-balancer/a1a6a98f2298dce5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apps-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e9b7652ea1a883a",
              "sg-0898aaa8609b6f29f",
              "sg-0cb1fa49524578b19",
              "sg-0eaf89ba6b17d4ccd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b4c9bcfd1aca7c6"
              },
              {
                "subnet_id": "subnet-0316a1a35ffb8500d"
              },
              {
                "subnet_id": "subnet-03d9fb165087429a2"
              }
            ],
            "subnets": [
              "subnet-02b4c9bcfd1aca7c6",
              "subnet-0316a1a35ffb8500d",
              "subnet-03d9fb165087429a2"
            ],
            "vpc_id": "vpc-03bf66b482012353c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/status-target-group/88d35b3df4196d72",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:loadbalancer/app/apps-load-balancer/a1a6a98f2298dce5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancing.aws_lb.apps",
            "module.load-balancing.aws_lb_target_group.apps",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/lights-target-group/e9f62e70ea762eba",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener-rule/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581/3b37511f0c86d9f4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener-rule/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581/3b37511f0c86d9f4",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancing.aws_lb.apps",
            "module.load-balancing.aws_lb_listener.apps",
            "module.load-balancing.aws_lb_target_group.apps",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/heating-target-group/e942cf95bcbf8e42",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener-rule/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581/acc67a0629ba1372",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener-rule/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581/acc67a0629ba1372",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancing.aws_lb.apps",
            "module.load-balancing.aws_lb_listener.apps",
            "module.load-balancing.aws_lb_target_group.apps",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/status-target-group/88d35b3df4196d72",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener-rule/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581/1548bc84bda8c3e3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener-rule/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581/1548bc84bda8c3e3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:listener/app/apps-load-balancer/a1a6a98f2298dce5/de92aba802bd8581",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancing.aws_lb.apps",
            "module.load-balancing.aws_lb_listener.apps",
            "module.load-balancing.aws_lb_target_group.apps",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/lights-target-group/e9f62e70ea762eba",
            "arn_suffix": "targetgroup/lights-target-group/e9f62e70ea762eba",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/lights-target-group/e9f62e70ea762eba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lights-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/heating-target-group/e942cf95bcbf8e42",
            "arn_suffix": "targetgroup/heating-target-group/e942cf95bcbf8e42",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/heating-target-group/e942cf95bcbf8e42",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/status-target-group/88d35b3df4196d72",
            "arn_suffix": "targetgroup/status-target-group/88d35b3df4196d72",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/status-target-group/88d35b3df4196d72",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/lights-target-group/e9f62e70ea762eba-20231206135932373400000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/lights-target-group/e9f62e70ea762eba",
            "target_id": "i-0e1c3c0dfb09c6297"
          },
          "dependencies": [
            "module.app-server.aws_instance.heating",
            "module.app-server.aws_instance.lighting",
            "module.app-server.aws_instance.status",
            "module.app-server.data.aws_ami.ubuntu",
            "module.load-balancing.aws_lb_target_group.apps",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/heating-target-group/e942cf95bcbf8e42-20231205172939017100000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/heating-target-group/e942cf95bcbf8e42",
            "target_id": "i-04063d3d1b56c7ba7"
          },
          "dependencies": [
            "module.app-server.aws_instance.heating",
            "module.app-server.aws_instance.lighting",
            "module.app-server.aws_instance.status",
            "module.app-server.data.aws_ami.ubuntu",
            "module.load-balancing.aws_lb_target_group.apps",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/status-target-group/88d35b3df4196d72-20231205172939029300000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:343246757285:targetgroup/status-target-group/88d35b3df4196d72",
            "target_id": "i-07dbb78557ee85529"
          },
          "dependencies": [
            "module.app-server.aws_instance.heating",
            "module.app-server.aws_instance.lighting",
            "module.app-server.aws_instance.status",
            "module.app-server.data.aws_ami.ubuntu",
            "module.load-balancing.aws_lb_target_group.apps",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress",
            "module.security.aws_security_group.http",
            "module.security.aws_security_group.https",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:internet-gateway/igw-0e03d8bc9b0eddbf1",
            "id": "igw-0e03d8bc9b0eddbf1",
            "owner_id": "343246757285",
            "tags": {
              "Name": "home-management-project-public-gw"
            },
            "tags_all": {
              "Name": "home-management-project-public-gw"
            },
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:route-table/rtb-0ea2eb83cd77d165a",
            "id": "rtb-0ea2eb83cd77d165a",
            "owner_id": "343246757285",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e03d8bc9b0eddbf1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "home-management-project-public-table"
            },
            "tags_all": {
              "Name": "home-management-project-public-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0824c666554419cf5",
            "route_table_id": "rtb-0ea2eb83cd77d165a",
            "subnet_id": "subnet-03d9fb165087429a2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad74040d40611e3a",
            "route_table_id": "rtb-0ea2eb83cd77d165a",
            "subnet_id": "subnet-0316a1a35ffb8500d"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0274f1dc58a581b81",
            "route_table_id": "rtb-0ea2eb83cd77d165a",
            "subnet_id": "subnet-02b4c9bcfd1aca7c6"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:subnet/subnet-093c1d52c8ea787f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093c1d52c8ea787f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343246757285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-0-eu-west-2a"
            },
            "tags_all": {
              "Name": "private-0-eu-west-2a"
            },
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:subnet/subnet-03da0e7dc39a34201",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03da0e7dc39a34201",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343246757285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1-eu-west-2b"
            },
            "tags_all": {
              "Name": "private-1-eu-west-2b"
            },
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:subnet/subnet-08898afe61689f4bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08898afe61689f4bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343246757285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2-eu-west-2c"
            },
            "tags_all": {
              "Name": "private-2-eu-west-2c"
            },
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:subnet/subnet-03d9fb165087429a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d9fb165087429a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343246757285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-0-eu-west-2a"
            },
            "tags_all": {
              "Name": "public-0-eu-west-2a"
            },
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:subnet/subnet-0316a1a35ffb8500d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0316a1a35ffb8500d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343246757285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1-eu-west-2b"
            },
            "tags_all": {
              "Name": "public-1-eu-west-2b"
            },
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:subnet/subnet-02b4c9bcfd1aca7c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b4c9bcfd1aca7c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343246757285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2-eu-west-2c"
            },
            "tags_all": {
              "Name": "public-2-eu-west-2c"
            },
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:vpc/vpc-03bf66b482012353c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0bfcc874c229becbc",
            "default_route_table_id": "rtb-0052df7c21811190f",
            "default_security_group_id": "sg-05c528e02b4814b27",
            "dhcp_options_id": "dopt-0a6d6006431adea79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03bf66b482012353c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0052df7c21811190f",
            "owner_id": "343246757285",
            "tags": {
              "Name": "home-management-project"
            },
            "tags_all": {
              "Name": "home-management-project"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group/sg-0898aaa8609b6f29f",
            "description": "Allows Egress connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0898aaa8609b6f29f",
            "ingress": [],
            "name": "allow_egress",
            "name_prefix": "",
            "owner_id": "343246757285",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-egress"
            },
            "tags_all": {
              "Name": "sg-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group/sg-0eaf89ba6b17d4ccd",
            "description": "Allows HTTP connections",
            "egress": [],
            "id": "sg-0eaf89ba6b17d4ccd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "343246757285",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-http"
            },
            "tags_all": {
              "Name": "sg-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group/sg-05e9b7652ea1a883a",
            "description": "Allows HTTPS connections",
            "egress": [],
            "id": "sg-05e9b7652ea1a883a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "343246757285",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-https"
            },
            "tags_all": {
              "Name": "sg-https"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group/sg-0cb1fa49524578b19",
            "description": "Allows SSH connections from the provided IP address",
            "egress": [],
            "id": "sg-0cb1fa49524578b19",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.24.169.23/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "343246757285",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-ssh"
            },
            "tags_all": {
              "Name": "sg-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf66b482012353c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group-rule/sgr-0ef3a26c1f47d436c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ef3a26c1f47d436c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0898aaa8609b6f29f",
            "security_group_rule_id": "sgr-0ef3a26c1f47d436c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.egress"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group-rule/sgr-0eb9d4ac5ba8bfdff",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0eb9d4ac5ba8bfdff",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eaf89ba6b17d4ccd",
            "security_group_rule_id": "sgr-0eb9d4ac5ba8bfdff",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.http"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group-rule/sgr-0c2339cfc54b9961a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c2339cfc54b9961a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eaf89ba6b17d4ccd",
            "security_group_rule_id": "sgr-0c2339cfc54b9961a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.http"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group-rule/sgr-090b2eb8b21b788cd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-090b2eb8b21b788cd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05e9b7652ea1a883a",
            "security_group_rule_id": "sgr-090b2eb8b21b788cd",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.https"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group-rule/sgr-0828cc47625ebad12",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0828cc47625ebad12",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05e9b7652ea1a883a",
            "security_group_rule_id": "sgr-0828cc47625ebad12",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.https"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:343246757285:security-group-rule/sgr-098f550f3656408e3",
            "cidr_ipv4": "86.24.169.23/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-098f550f3656408e3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cb1fa49524578b19",
            "security_group_rule_id": "sgr-098f550f3656408e3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.ssh"
          ]
        }
      ]
    }
  ]
}